package com.masanz.marraz;

import com.masanz.marraz.app.App;

public class Main {

    public static void main(String[] args) {
        App.main(args);
    }

}
